# pysoilmap

./: .gitignore  .readthedocs.yml  README.rst  setup.cfg
.github/workflows/: main.yml
docs/: .gitignore  conf.py  index.rst  installation.rst  rtd_requirements.txt  usage.rst
docs/_static/: custom.css
docs/_templates/: page.html
docs/api/: index.rst
docs/api/pysoilmap/: ee.rst  features.rst  rasterops.rst  shapeops.rst
docs/examples/: clouds.py  index.rst  spectral.py  topography.py
src/pysoilmap/: __main__.py  ee.py  features.py  plotting.py  rasterops.py  shapeops.py
src/pysoilmap/cli/: __init__.py  help.py  shapefile.py
tests/: test_shapeops.py
