[options]
packages = pysoilmap
python_requires = >=3.7
install_requires =
    geopandas
    shapely
include_package_data = true
zip_safe = true
package_dir=
    =src

[options.extras_require]
dev =
    flake8
    pytest
    twine

doc =
    sphinx
    sphinx_automodapi
    sphinx_autodoc_typehints

[metadata]
name             = pysoilmap
version          = attr: pysoilmap.__version__
description      = Tools for performing Digital Soil Mapping (DSM) with python.
url              = https://github.com/pysoilmap/pysoilmap
long_description = file: README.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
keywords         = DSM, GIS, soil, topography, machine learning, kriging
classifiers      =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: GIS
long_description_content_type = text/x-rst
