[options]
packages =
    pysoilmap
    pysoilmap.cli
python_requires = >=3.7
install_requires =
    affine
    click
    geopandas
    numpy
    pygeos==0.10
    pyproj
    rasterio
    scipy
    shapely==1.8
    xarray
include_package_data = true
zip_safe = true
package_dir=
    =src

[options.entry_points]
console_scripts =
    pysoilmap = pysoilmap.cli:main

[options.extras_require]
dev =
    flake8
    pytest
    twine

doc =
    sphinx
    sphinx_automodapi
    sphinx_autodoc_typehints
    sphinx-click

[metadata]
name             = pysoilmap
version          = attr: pysoilmap.__version__
description      = Tools for performing Digital Soil Mapping (DSM) with python.
url              = https://github.com/pysoilmap/pysoilmap
long_description = file: README.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
keywords         = DSM, GIS, soil, topography, machine learning, kriging
license          = Unlicense
license_file     = UNLICENSE
classifiers      =
    Development Status :: 1 - Planning
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: GIS
long_description_content_type = text/x-rst

[coverage:paths]
# when running `coverage combine`, replace these paths by `src/pysoilmap`, see:
# https://coverage.readthedocs.io/en/latest/config.html#paths
source =
    src/pysoilmap
    */site-packages/pysoilmap-*.egg/pysoilmap
    */site-packages/pysoilmap/
